CHANGES.txt - 2007-02-11
------------------------

CHANGES IN CUPS V1.3

	- Documentation updates (STR #2131)
	- The default configuration now allows browse packets from
	  any address (STR #2008)
	- The web interface now provides an "allow printing from the
	  Internet" check box (STR #1897)
	- The notify-events-default and
	  notify-lease-duration-default attributes can now be set
	  (STR #1671)
	- Server-side default options are now sent to clients when
	  the "printer-defaults" attribute group is requested (STR
	  #1923)
	- Added support for Linux "relro" linker option (STR #1614)
	- CUPS now validates the number-up option value (STR #1329)
	- The on-line help now provides better search capabilities
	  (STR #1701)
	- The web interface "Add This Printer" button now allows you
	  to change the printer name, description,  and location
	  (STR #1646)
	- Added support for Mac OS X authorization services
	  (STR #2206)
	- Added support for driver-specific pre-filters (STR #2108)
	- Added a new side-channel API for drivers and backends
	  for basic device control and information queries (STR
	  #1898)
	- The scheduler now uses poll(), epoll(), or /dev/kqueue
	  instead of select() when possible (STR #1261)
	- Added new cupsArrayGetIndex() and cupsArrayGetInsert()
	  functions to get the current index and insertion
	  positions of an array.
	- Added a new --with-max-copies configure option (STR
	  #2090)
	- Added new cupsRemoveDest() and cupsSetDefaultDest()
	  functions.
	- Added support for cupsPJLCharset attribute in PPD files
	  which specifies the character set that is used in PJL
	  strings (STR #1969)
	- Moved the definition of the (private) _http_s structure
	  to http-private.h; code that directly accesses the
	  http_t members will no longer compile!
	- Added support for setting the document-format-default
	  attribute on a per-printer basis.
	- Added support for IntelliBar label printers.